--- a/views/templates/default.html.twig
+++ b/views/templates/default.html.twig
@@ -1,3 +1,4 @@
+{% import "helpers/ng.twig" as ng %}
 <!doctype html>
 <html class="no-js">
     <head>
@@ -14,6 +15,7 @@
 
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
         <!-- endbuild -->
 
         <!-- build:js scripts/vendor/modernizr.js -->
@@ -42,8 +44,10 @@
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="/bower_components/angular/angular.js"></script>
         <script src="/scripts/main.js"></script>
+        <script src="/scripts/SalonService.js"></script>
         <script src="/scripts/controllers/salons-list.js"></script>
         <!-- endbuild -->
 </body>
