added instructions to turn geolocation on; changed getCurrentPosition for watchPosition to maintain the user's position. Added a Service for Geolocation

--- a/views/pages/index.html.twig
+++ b/views/pages/index.html.twig
@@ -7,6 +7,8 @@
         your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    {{ component.modal_ok("turn_geolocation_on", "Permissão para acessar sua localização", "Para uma melhor navegação, aceite compartilhar sua localização conosco.") }}
+
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
