--- a/views/templates/default.html.twig
+++ b/views/templates/default.html.twig
@@ -25,7 +25,7 @@
     <!-- endbuild -->
 
 </head>
-<body ng-app="ihair">
+<body ng-app="ihair" ng-controller="main">
 {% block content %}
 {% endblock %}
 
@@ -63,8 +63,10 @@
 
 <script src="/scripts/main.js"></script>
 <script src="/scripts/SalonService.js"></script>
+<script src="/scripts/Geolocation.js"></script>
 <script src="/scripts/controllers/salons-list.js"></script>
 <script src="/scripts/controllers/map.js"></script>
+<script src="/scripts/controllers/main.js"></script>
 <!-- endbuild -->
 </body>
 </html>
