--- a/views/templates/default.html.twig
+++ b/views/templates/default.html.twig
@@ -64,6 +64,7 @@
 <script src="/scripts/main.js"></script>
 <script src="/scripts/SalonService.js"></script>
 <script src="/scripts/Geolocation.js"></script>
+<script src="/scripts/Map.js"></script>
 <script src="/scripts/controllers/salons-list.js"></script>
 <script src="/scripts/controllers/map.js"></script>
 <script src="/scripts/controllers/main.js"></script>
