--- a/views/pages/index.html.twig
+++ b/views/pages/index.html.twig
@@ -43,9 +43,14 @@
 
 
     <div class="container-fluid no-margin" ng-controller="map">
-
         <div class="google-map" center="map.center" zoom="map.zoom" draggable="true" events="map.events" control="map.control" options="map.options">
-            <markers models="salons" coords="'location'"></markers>
+            <marker ng-repeat="salon in salons" coords="salon.location" >
+                <window>
+                    <h4>{{ ng.curly("salon.name") }}</h4>
+                    <p>{{ ng.curly("salon.vicinity") }}</p>
+                </window>
+            </marker>
+
             <marker coords="map.user_marker" icon="'/images/map-marker-user-location.png'"></marker>
         </div>
 
