--- a/views/helpers/components.html.twig
+++ b/views/helpers/components.html.twig
@@ -18,3 +18,26 @@
         <!-- /.modal-dialog -->
     </div><!-- /.modal -->
 {% endmacro %}
+
+{% macro modal_salon_details(id, name, rating, vicinity, ok_text='OK') %}
+    <div class="modal fade" id="{{ id }}">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">{{ name }}</h4>
+                </div>
+                <div class="modal-body">
+                    <rating ng-model="{{ rating }}" max="5"></rating>
+
+                    <p>{{ vicinity }}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">{{ ok_text }}</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+{% endmacro %}
