--- a/views/pages/index.html.twig
+++ b/views/pages/index.html.twig
@@ -34,7 +34,6 @@
                         </ul>
                     </li>
                 </ul>
-                {{ component.modal_salon_details("salon_details", "{{ salon_detail.name }}", "salon_detail.rating", "{{ salon_detail.vicinity }}") }}
             </div>
 
             <!-- /.navbar-collapse -->
@@ -45,16 +44,12 @@
 
     <div class="container-fluid no-margin" ng-controller="map">
         <div class="google-map" center="map.center" zoom="map.zoom" draggable="true" events="map.events" control="map.control" options="map.options">
-            <marker ng-repeat="salon in salons" coords="salon.location" >
-                <window>
-                    <rating ng-model="salon.rating" max="5"></rating>
-                    <h4>{{ ng.curly("salon.name") }}</h4>
-                    <p>{{ ng.curly("salon.vicinity") }}</p>
-                </window>
-            </marker>
+            <marker ng-repeat="salon in salons" coords="salon.location" click="list_salon_click(salon)"></marker>
 
             <marker coords="map.user_marker" icon="'/images/map-marker-user-location.png'"></marker>
         </div>
 
     </div>
+
+    {{ component.modal_salon_details("salon_details", "{{ salon_detail.name }}", "salon_detail.rating", "{{ salon_detail.vicinity }}") }}
 {% endblock %}
